--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <form id="trick-entry-form">
           <div id="player-tricks-container">
             <!-- Player trick inputs will be dynamically inserted here -->
-            <!-- Each player will have: tricks won input and bonus checkboxes -->
+            <!-- Each player will have: predicted-tricks input, actual-tricks input, and bonus checkboxes -->
           </div>
           
           <div class="form-actions">
