--- a/index.html
+++ b/index.html
@@ -7,24 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="app">
-        <header>
-            <h1>Vanilla JS Application</h1>
-        </header>
-        <main>
-            <div id="player-setup-container"></div>
-            <div id="player-list-container"></div>
-            <button type="button" id="start-game-btn" disabled>Need 2 more players</button>
-        </main>
-    </div>
-    <script src="js/player-manager.js"></script>
-    <script src="js/ui-components.js"></script>
-    <script src="app.js"></script>
-    <script>
-        // Initialize player UI when DOM is loaded
-        document.addEventListener('DOMContentLoaded', () => {
-            initializePlayerUI();
-        });
-    </script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
