--- a/index.html
+++ b/index.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vanilla JS App</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Oh Hell Card Game</title>
+  <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
-    <div id="app">
-        <header>
-            <h1>Vanilla JS Application</h1>
-        </header>
-        <main>
-            <div id="player-setup-container"></div>
-            <div id="player-list-container"></div>
-            <button type="button" id="start-game-btn" disabled>Need 2 more players</button>
-        </main>
-    </div>
-    <script src="js/player-manager.js"></script>
-    <script src="js/ui-components.js"></script>
-    <script src="app.js"></script>
-    <script>
-        // Initialize player UI when DOM is loaded
-        document.addEventListener('DOMContentLoaded', () => {
-            initializePlayerUI();
-        });
-    </script>
+  <div id="root"></div>
+  <div id="scoreboard">
+    <h2>Scoreboard</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Player</th>
+          <th>Round 1</th>
+          <th>Round 2</th>
+          <!-- Add more rounds as needed -->
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Player 1</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>Player 2</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>Player 3</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>Player 4</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div id="trick-entry">
+    <h2>Trick Entry</h2>
+    <p>Enter tricks won for each player after the round.</p>
+    <!-- Placeholder for trick entry form -->
+  </div>
+  <script type="text/babel" src="src/main.js"></script>
 </body>
 </html>
