--- a/index.html
+++ b/index.html
@@ -3,53 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oh Hell Card Game</title>
-  <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <title>Sk10 Game</title>
 </head>
 <body>
   <div id="root"></div>
-  <div id="scoreboard">
-    <h2>Scoreboard</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Player</th>
-          <th>Round 1</th>
-          <th>Round 2</th>
-          <!-- Add more rounds as needed -->
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Player 1</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>Player 2</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>Player 3</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>Player 4</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div id="trick-entry">
-    <h2>Trick Entry</h2>
-    <p>Enter tricks won for each player after the round.</p>
-    <!-- Placeholder for trick entry form -->
-  </div>
-  <script type="text/babel" src="src/main.js"></script>
+  <script src="src/main.js"></script>
 </body>
 </html>
